Add hover effect and css effects
- Added mouse hover effect when curser is over divs
inside the sketch box
- Changed color theme of page.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,32 @@
 h1 {
     text-decoration: underline;
     text-align: center;
+    background-color: black;
+    padding: 10px 20px;
+    border: solid 2px chartreuse;
+    margin-bottom: 0px;
+}
+body {
+    color: chartreuse;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: linear-gradient(blueviolet, black);
+    height: 100vh;
+}
+button {
+    font-size: 18px;
+    background-color: black;
+    color: chartreuse;
+    margin-bottom: 5px;
+}
+p {
+    background-color: black;
+    font-size: 20px;
+    border: solid 2px chartreuse;
+    padding: 10px 5px;
+    margin-bottom: 5px;
+    margin-top: 20px;
 }
 .gridContainer {
     display: flex;
@@ -9,8 +35,28 @@ h1 {
     justify-content: space-evenly;
     width: 960px;
     height: 960px;
-    border: solid 1px black;
+    border: solid 1px chartreuse;
 }
+
+@keyframes hover {
+    0% {
+        background-color: transparent;
+    }
+    100% {
+        background-color: chartreuse;
+    }
+}
+
 .square {
     flex: 1 0 auto;
+    animation-name: hover;
+    animation-duration: 200ms;
+    animation-fill-mode: backwards;
+    animation-play-state: paused;
+}
+.square:active,
+.square:focus,
+.square:hover {
+    animation-fill-mode: forwards;
+    animation-play-state: running;
 }
